--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
@@ -20,7 +21,6 @@ jobs:
           pip install pylint
 
       - name: Analysing the code with pylint
-        uses: actions/checkout@v3
         run: |
           pylint --disable=C,R src > pylint_output.txt || true
 
@@ -30,7 +30,6 @@ jobs:
           echo "Pylint Score: $SCORE" > pylint_score.txt
 
       - name: Post Pylint score as a pull request review comment
-        uses: actions/checkout@v3
         uses: actions/github-script@v4
         with:
           script: |
