--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -32,14 +32,11 @@ jobs:
       - name: Post Pylint score as a pull request review comment
         uses: actions/github-script@v4
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const fs = require('fs');
-            const score = fs.readFileSync('pylint_score.txt', 'utf8').trim();
-            const octokit = new github.GitHub(process.env.GITHUB_TOKEN);
-            octokit.pulls.createReview({
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number: context.payload.pull_request.number,
-              event: 'COMMENT',
-              body: `${score}`
-            });
+              body: 'This is a comment posted from the workflow!'
+            })
