--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   pylint:
-    permissions: write-all
     runs-on: ubuntu-latest
 
     steps:
@@ -38,5 +37,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'This is a comment posted from the workflow!'
+              body: 'pylint_score.txt
             })
