--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,11 +1,13 @@
-astroid==3.1.0
+astroid==3.2.2
+concave_hull==0.0.7
 contourpy==1.2.1
 cycler==0.12.1
 dill==0.3.8
+engineering-notation==0.10.0
 fonttools==4.51.0
 gurobipy==10.0.3
 isort==5.13.2
-joblib==1.3.2
+joblib==1.4.0
 kiwisolver==1.4.5
 mapel==2.1.8
 mapel-core==2.1.8
@@ -17,21 +19,27 @@ mccabe==0.7.0
 networkx==3.3
 numpy==1.24.4
 packaging==24.0
-pandas==2.2.1
+pandas==2.2.2
 Pillow==10.0.1
-platformdirs==4.2.0
+platformdirs==4.2.2
 prefsampling==0.1.15
-pylint==3.1.0
+pylint==3.2.2
 pyparsing==3.1.2
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
 scikit-learn==1.3.2
 scipy==1.10.1
 six==1.16.0
 threadpoolctl==3.4.0
 tikzplotlib==0.10.1
+tk==0.1.0
+tk-tools==0.16.0
 tomli==2.0.1
-tomlkit==0.12.4
+tomlkit==0.12.5
 tqdm==4.66.2
 typing_extensions==4.11.0
 tzdata==2024.1
