divide_and_conquare -> divide_and_conquer

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -162,7 +162,7 @@ labels_generator:
       accept: -5
       no_local_search: True
 
-    divide_and_conquare:
+    divide_and_conquer:
       maxiter: 700
       visit: 4
       initial_temp: 7230
